; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/android/extr_utils.c_jni_detach_thread.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/android/extr_utils.c_jni_detach_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 (%struct.TYPE_8__**, %struct.TYPE_7__***)* }
%struct.TYPE_7__ = type { i32 (%struct.TYPE_7__**)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @jni_detach_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jni_detach_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_8__**, align 8
  %4 = alloca %struct.TYPE_7__**, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.TYPE_8__**
  store %struct.TYPE_8__** %6, %struct.TYPE_8__*** %3, align 8
  %7 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %3, align 8
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  %10 = load i32 (%struct.TYPE_8__**, %struct.TYPE_7__***)*, i32 (%struct.TYPE_8__**, %struct.TYPE_7__***)** %9, align 8
  %11 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %3, align 8
  %12 = call i32 %10(%struct.TYPE_8__** %11, %struct.TYPE_7__*** %4)
  %13 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %4, align 8
  %14 = call i32 @assert(%struct.TYPE_7__** %13)
  %15 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %4, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = load i32 (%struct.TYPE_7__**)*, i32 (%struct.TYPE_7__**)** %17, align 8
  %19 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %4, align 8
  %20 = call i32 %18(%struct.TYPE_7__** %19)
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_7__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
